--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 html,
 body {
+  height: 100%;
   margin: 0;
 }
 
 #App {
-  font-family: sans-serif;
-  height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 100%;
 }
 
 #page-wrap {
