--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-image: url(https://travtalkindia.com/wp-content/uploads/2016/10/back-img.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 #App {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
 }
 
+#container {
+  min-height: 100%;
+  border: 5px solid pink;
+}
+
 #page-wrap {
+  border: 5px solid blue;
   text-align: center;
   overflow: auto;
+  height: 100%;
 }
 
 .bm-item {
