--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,13 @@ body {
 }
 
 #App {
-  height: 100%;
+  min-height: 100%;
+  position: relative;
 }
 
 #container {
   min-height: 100%;
+  padding-bottom: 60px;
 }
 
 #page-wrap {
